improve AMS version

--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -4766,8 +4766,8 @@ However, $n\in \sigma_{i+1}$ so $\max \sigma_{i+1}>n>m>\min M_i $ implies that $
 \end{proof}
 
 \begin{figure}[h!]
-	{\footnotesize
-\begin{tikzcd}[column sep = 0.5cm]
+\centerline{
+\begin{tikzcd}[column sep = 0.5cm, ampersand replacement=\&]
 \begin{bmatrix}
   &   & 1 & 3 \\
 2 & 4 & 7 &   \\
@@ -4775,7 +4775,7 @@ However, $n\in \sigma_{i+1}$ so $\max \sigma_{i+1}>n>m>\min M_i $ implies that $
 6 &   &   &   \\
 \end{bmatrix}
 \arrow[r,"R^{\SU}_{56}"]
-&
+\&
 \begin{bmatrix}
   &   & 1 & 3 \\
 2 & 4 & 7 &   \\
@@ -4783,7 +4783,7 @@ However, $n\in \sigma_{i+1}$ so $\max \sigma_{i+1}>n>m>\min M_i $ implies that $
   & 6 &   &   \\
 \end{bmatrix}
 \arrow[r,"L^{\SU}_7"]
-&
+\&
 \begin{bmatrix}
   &   & 1 & 3 \\
 2 & 4 &   &   \\
@@ -4791,14 +4791,14 @@ However, $n\in \sigma_{i+1}$ so $\max \sigma_{i+1}>n>m>\min M_i $ implies that $
   & 6 &   &   \\
 \end{bmatrix}
 \arrow[r,"R^{\SU}_7"]
-&
+\&
 \begin{bmatrix}
   &   & 1 & 3 \\
 2 & 4 &   &   \\
   & 5 &   & 7 \\
   & 6 &   &   \\
 \end{bmatrix}
-\\
+\\[-.3cm]
 \begin{bmatrix}
   &   &   & 2 \\
   &   &   & 3 \\
@@ -4806,7 +4806,7 @@ However, $n\in \sigma_{i+1}$ so $\max \sigma_{i+1}>n>m>\min M_i $ implies that $
 5 & 7 &   &   \\
 \end{bmatrix}
 \arrow[r,"R^{\LA}_{23}"]
-&
+\&
 \begin{bmatrix}
   &   & 2 &   \\
   &   & 3 &   \\
@@ -4814,7 +4814,7 @@ However, $n\in \sigma_{i+1}$ so $\max \sigma_{i+1}>n>m>\min M_i $ implies that $
 5 & 7 &   &   \\
 \end{bmatrix}
 \arrow[r,"L^{\LA}_1"]
-&
+\&
 \begin{bmatrix}
   &   & 2 &   \\
   & 1 & 3 &   \\
@@ -4822,7 +4822,7 @@ However, $n\in \sigma_{i+1}$ so $\max \sigma_{i+1}>n>m>\min M_i $ implies that $
 5 & 7 &   &   \\
 \end{bmatrix}
 \arrow[r,"R^{\LA}_1"]
-&
+\&
 \begin{bmatrix}
   &   & 2 &   \\
 1 &   & 3 &   \\
