--- a/AMS/diag.tex
+++ b/AMS/diag.tex
@@ -2879,8 +2879,8 @@ However, $n\in \sigma_{i+1}$ so $\max \sigma_{i+1}>n>m>\min M_i $ implies that $
 \end{proof}
 
 \begin{figure}[h!]
-	{\footnotesize
-\begin{tikzcd}[column sep = 0.5cm]
+\centerline{
+\begin{tikzcd}[column sep = 0.5cm, ampersand replacement=\&]
 \begin{bmatrix}
   &   & 1 & 3 \\
 2 & 4 & 7 &   \\
@@ -2888,7 +2888,7 @@ However, $n\in \sigma_{i+1}$ so $\max \sigma_{i+1}>n>m>\min M_i $ implies that $
 6 &   &   &   \\
 \end{bmatrix}
 \arrow[r,"R^{\SU}_{56}"]
-&
+\&
 \begin{bmatrix}
   &   & 1 & 3 \\
 2 & 4 & 7 &   \\
@@ -2896,7 +2896,7 @@ However, $n\in \sigma_{i+1}$ so $\max \sigma_{i+1}>n>m>\min M_i $ implies that $
   & 6 &   &   \\
 \end{bmatrix}
 \arrow[r,"L^{\SU}_7"]
-&
+\&
 \begin{bmatrix}
   &   & 1 & 3 \\
 2 & 4 &   &   \\
@@ -2904,7 +2904,7 @@ However, $n\in \sigma_{i+1}$ so $\max \sigma_{i+1}>n>m>\min M_i $ implies that $
   & 6 &   &   \\
 \end{bmatrix}
 \arrow[r,"R^{\SU}_7"]
-&
+\&
 \begin{bmatrix}
   &   & 1 & 3 \\
 2 & 4 &   &   \\
@@ -2919,7 +2919,7 @@ However, $n\in \sigma_{i+1}$ so $\max \sigma_{i+1}>n>m>\min M_i $ implies that $
 5 & 7 &   &   \\
 \end{bmatrix}
 \arrow[r,"R^{\LA}_{23}"]
-&
+\&
 \begin{bmatrix}
   &   & 2 &   \\
   &   & 3 &   \\
@@ -2927,7 +2927,7 @@ However, $n\in \sigma_{i+1}$ so $\max \sigma_{i+1}>n>m>\min M_i $ implies that $
 5 & 7 &   &   \\
 \end{bmatrix}
 \arrow[r,"L^{\LA}_1"]
-&
+\&
 \begin{bmatrix}
   &   & 2 &   \\
   & 1 & 3 &   \\
@@ -2935,7 +2935,7 @@ However, $n\in \sigma_{i+1}$ so $\max \sigma_{i+1}>n>m>\min M_i $ implies that $
 5 & 7 &   &   \\
 \end{bmatrix}
 \arrow[r,"R^{\LA}_1"]
-&
+\&
 \begin{bmatrix}
   &   & 2 &   \\
 1 &   & 3 &   \\
