improve AMS version

--- a/AMS/Diagonalpermutohedra.tex
+++ b/AMS/Diagonalpermutohedra.tex
@@ -249,8 +249,8 @@
 \def\l@part{\@tocline{1}{8pt}{0pc}{}{}}
 \def\l@section{\@tocline{1}{4pt}{0pc}{}{}}
 \makeatother
-\let\oldtocpart=\tocpart
-\renewcommand{\tocpart}[2]{\sc\large\oldtocpart{#1}{#2}}
+\let\oldtocchapter=\tocchapter
+\renewcommand{\tocchapter}[2]{\sc\large\oldtocchapter{#1}{#2}}
 \let\oldtocsection=\tocsection
 \renewcommand{\tocsection}[2]{\bf\oldtocsection{#1}{#2}}
 \let\oldtocsubsubsection=\tocsubsubsection
@@ -339,7 +339,7 @@ We provide a systematic enumerative and combinatorial study of geometric cellula
 In the first part of the paper, we study the combinatorics of certain hyperplane arrangements obtained as the union of $\ell$ generically translated copies of the classical braid arrangement.
 Based on Zaslavsky's theory, we derive enumerative results on the faces of these arrangements involving combinatorial objects named partition forests and rainbow forests.
 This yields in particular nice formulas for the number of regions and bounded regions in terms of exponentials of generating functions of Fuss-Catalan numbers.
-By duality, the specialization of these results to the case $\ell = 2$ gives the enumeration of any geometric diagonal of the permutahedron.
+By duality, the specialization of these results to the case~$\ell = 2$ gives the enumeration of any geometric diagonal of the permutahedron.
 
 In the second part of the paper, we study diagonals which respect the operadic structure on the family of permutahedra.
 We show that there are exactly two such diagonals, which are moreover isomorphic.
