--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -448,7 +448,7 @@ We provide a combinatorial description of the possible orderings of a $(\ell,n)$
 
 \subsection*{\cref{part:diagonalsPermutahedra}. Diagonals of permutahedra}
 
-We present cellular diagonals, the Fulton--Sturmfels method, the magical formula and specialize the results of Part I to the permutahedra in \cref{sec:cellularDiagonals}.
+We present cellular diagonals, the Fulton--Sturmfels method, the magical formula and specialize the results of \cref{part:multiBraidArrangements} to the permutahedra in \cref{sec:cellularDiagonals}.
 Then, we initiate in \cref{sec:operadicDiagonals} the study of operadic diagonals (\cref{def:operadicDiagonal}).
 These are families of diagonals of the permutahedra which are compatible with the property that faces of permutahedra are product of lower-dimensional permutahedra. 
 
@@ -2504,7 +2504,7 @@ The \defn{standardization} of a pair~$(I,J)$ of disjoint subsets of~$[n]$ is the
 More precisely, it is defined recursively by
 \begin{itemize}
 \item $\std(\varnothing, \varnothing) \eqdef (\varnothing, \varnothing)$, and
-\item if~$k \eqdef \card{I}+\card{J}$ and~$\ell \eqdef \max(I \cup J)$ belongs to~$I$ (resp. $J$), then~$\std(I,J) = (U \cup \{k\}, V)$ (resp. $\std(I,J) \! = \! (U, V \cup \{k\})$) where~$(U,V) \! = \! \std(I \ssm \{\ell\}, J)$ (resp. ${(U,V) \! = \! \std(I, J \ssm \{\ell\})}$).
+\item if~$k \eqdef \card{I}+\card{J}$ and~$\ell \eqdef \max(I \cup J)$ belongs to~$I$ (\resp $J$), then~$\std(I,J) = (U \cup \{k\}, V)$ (\resp $\std(I,J) \! = \! (U, V \cup \{k\})$) where~$(U,V) \! = \! \std(I \ssm \{\ell\}, J)$ (\resp ${(U,V) \! = \! \std(I, J \ssm \{\ell\})}$).
 \end{itemize}
 \end{definition}
 
