--- a/AMS/intro.tex
+++ b/AMS/intro.tex
@@ -118,7 +118,7 @@ We provide a combinatorial description of the possible orderings of a $(\ell,n)$
 
 \subsection*{\cref{part:diagonalsPermutahedra}. Diagonals of permutahedra}
 
-We present cellular diagonals, the Fulton--Sturmfels method, the magical formula and specialize the results of Part I to the permutahedra in \cref{sec:cellularDiagonals}.
+We present cellular diagonals, the Fulton--Sturmfels method, the magical formula and specialize the results of \cref{part:multiBraidArrangements} to the permutahedra in \cref{sec:cellularDiagonals}.
 Then, we initiate in \cref{sec:operadicDiagonals} the study of operadic diagonals (\cref{def:operadicDiagonal}).
 These are families of diagonals of the permutahedra which are compatible with the property that faces of permutahedra are product of lower-dimensional permutahedra. 
 
@@ -143,7 +143,7 @@ A pair of permutations of $[n]$ is a vertex of the $\LA$ (\resp $\SU$) diagonal 
 	(j_1 i_1 j_2 i_2 \cdots j_k i_k,\ i_2 j_1 i_3 j_2 \cdots i_k j_{k-1} i_1 j_k), \tag{LA} \\
 	\text{ \resp } (j_1 i_1 j_2 i_2 \cdots j_k i_k, \ i_1 j_k i_2 j_1 \cdots i_{k-1} j_{k-2}i_k j_{k-1}), \tag{SU}
 \end{align}
-For each $k \ge 1$, there are $\binom{2k-1}{k-1,k}(k-1)!k!$ such patterns, which are $(21,12)$ for $k=1$, and the following for $k=2$
+For each $k \ge 1$, there are $\binom{2k-1}{k-1,k}(k-1)!k!$ such patterns, which are $(21,12)$ \linebreak for~$k=1$, and the following for~$k=2$
 \begin{itemize}
 	\item $\LA$ avoids the patterns
 	$(3142,2314)$, $(4132,2413)$,
