--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -627,7 +627,7 @@ The \defn{flat poset} of~$\arrangement$ is the poset~$\flatPoset$ of flats of~$\
 
 \begin{definition}
 \label{def:MobiusPolynomial}
-The \defn{M\"obius polynomial}~$\mu_{\arrangement}(x,y)$ of~$\arrangement$ is the polynomial defined by
+The \defn{M\"obius polynomial}~$\mobPol(x,y)$ of~$\arrangement$ is the polynomial defined by
 \[
 \mobPol \eqdef \sum_{F \le G} \mu_{\flatPoset}(F,G) \, x^{\dim(F)} \, y^{\dim(G)},
 \]
