--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -271,7 +271,7 @@
 BDO was partially supported by the French ANR grants ALCOHOL (ANR-19-CE40-0006), CARPLO (ANR-20-CE40-0007), HighAGT (ANR-20-CE40-0016) and S3 (ANR-20-CE48-0010). 
 GLA and KS were supported by the Australian Research Council Future Fellowship FT210100256. 
 KS was supported by an Australian Government Research Training Program (RTP) Scholarship.
-VP was partially supported by the French ANR grant CHARMS (ANR-19-CE40-0017) and by the French--Austrian project PAGCAP (ANR-21-CE48-0020 \& FWF I 5788).
+VP was a CNRS researcher at \'Ecole Polytechnique when this work was done, and was partially supported by the French ANR grant CHARMS (ANR-19-CE40-0017) and by the French--Austrian project PAGCAP (ANR-21-CE48-0020 \& FWF I 5788).
 }
 
 \author[B. Delcroix-Oger]{B\'er\'enice Delcroix-Oger}
@@ -284,10 +284,10 @@ VP was partially supported by the French ANR grant CHARMS (ANR-19-CE40-0017) and
 \email{guillaume.laplanteanfossi@unimelb.edu.au}
 \urladdr{\url{https://guillaumelaplante-anfossi.github.io/}}
 
-\author[V. Pilaud]{Vincent Pilaud}
-\address[Vincent Pilaud]{CNRS \& LIX, \'Ecole Polytechnique, Palaiseau, France}
-\email{vincent.pilaud@lix.polytechnique.fr}
-\urladdr{\url{http://www.lix.polytechnique.fr/~pilaud/}}
+\author[V.~Pilaud]{Vincent Pilaud}
+\address[Vincent Pilaud]{Universitat de Barcelona}
+\email{vincent.pilaud@ub.edu}
+\urladdr{\url{https://www.ub.edu/comb/vincentpilaud/}}
 
 \author[K. Stoeckl]{Kurt Stoeckl}
 \address[Kurt Stoeckl]{School of Mathematics and Statistics, The University of Melbourne, Victoria, Australia}
@@ -317,12 +317,12 @@ In the third part of the paper, we use the preceding results to show that there 
 \vspace*{-1.4cm}
 \maketitle
 
-\vspace*{-.6cm}
+\vspace*{-.7cm}
 \centerline{\includegraphics[scale=.75]{diagonalPermutahedron3}}
-\vspace*{-.2cm}
+\vspace*{-.4cm}
 
 \newpage
-\enlargethispage{1cm}
+\enlargethispage{1.3cm}
 \tableofcontents
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
