Correct wrong spelling Saneblidze

--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -309,7 +309,7 @@ By duality, the specialization of these results to the case $\ell = 2$ gives the
 In the second part of the paper, we study diagonals which respect the operadic structure on the family of permutahedra.
 We show that there are exactly two such diagonals, which are moreover isomorphic.
 We describe their facets by a simple rule on paths in partition trees, and their vertices as pattern-avoiding pairs of permutations.
-We show that one of these diagonals is a topological enhancement of the Sanbeblidze--Umble diagonal, and unravel a natural lattice structure on their sets of facets.
+We show that one of these diagonals is a topological enhancement of the Saneblidze--Umble diagonal, and unravel a natural lattice structure on their sets of facets.
 
 In the third part of the paper, we use the preceding results to show that there are precisely two isomorphic topological cellular operadic structures on the families of operahedra and multiplihedra, and exactly two infinity-isomorphic geometric universal tensor products of homotopy operads and A-infinity morphisms.
 \end{abstract}
